--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "dev": "node server.js",
+    "dev": "node app/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "prisma": {
