vercel correction rename api

--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     [
         {
             "source": "/(.*)",
-            "destination": "/app"
+            "destination": "/api"
         }
     ]
 
