--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     [
         {
             "source": "/(.*)",
-            "destination": "/api"
+            "destination": "./api"
         }
     ]
 
