--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,8 @@
 {
-    "rewrites":
-    [
+    "rewrites": [
         {
             "source": "/(.*)",
-            "destination": "./api"
+            "destination": "/api"
         }
     ]
-
 }
